[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tempfile = "3.8"
uuid = { version = "1.5", features = ["v4"] }
env_logger = "0.10"
log = "0.4"
